--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8090
 liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
